@@ -10,3 +10,4 @@ v2.54:
 - it's possible to set the display-precision of the post decimals: from the commandline and whithin the interactive-mode.
 - values will won't be displayed in scientific-mode anymore (due to syntaxchecking problems on loading functions).
 - if the upper bound of a Sum or a Prod is less then the startvalue 0 is returned
+- command "builtins" shows all buitlin-functions ans -operators
